Fixing up spacing of tiles. Minor grammar fixes.
Margin spacing given to the top of the page to give clearer layout.

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 5vh;
 }
 
 .movie-gallery{
